--- a/css/style.css
+++ b/css/style.css
@@ -77,19 +77,23 @@ a:active {
 
 .button {
   font-weight: 600;
-  display: inline-block;/* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
+  display: inline-block;
+  /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
   background-color: #E95330;
-  color: #ffffff !important;/* needed to override the default link color */
+  color: #ffffff !important;
+  /* needed to override the default link color */
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid #994c30;/* width of the border, type, color */
+  border-bottom: 2px solid #994c30;
+  /* width of the border, type, color */
   transition: 0.2s opacity;
   text-decoration: none;
 }
 
 .button:hover,
 .button:focus {
-  opacity: 0.8; /* Reduces the opacity of the button to 80% */
+  opacity: 0.8;
+  /* Reduces the opacity of the button to 80% */
 }
 
 .button.contact {
@@ -103,7 +107,8 @@ a:active {
   background-color: #E95330 !important;
   color: #ffffff !important;
   border: 2px solid #E95330 !important;
-  opacity: 0.8;/* Reduces the opacity of the button to 80% */
+  opacity: 0.8;
+  /* Reduces the opacity of the button to 80% */
 }
 
 .button.contact:active {
@@ -163,8 +168,7 @@ p {
 
 header {
   text-align: center;
-  background-color: #ffffff
-  padding: 10px 0;
+  background-color: #ffffff padding: 10px 0;
   width: 100%;
   position: fixed;
   box-shadow: 0px 1px 30px 0px rgba(50, 50, 50, 0.55);
@@ -174,32 +178,32 @@ header {
   max-width: 250px;
 }
 
-nav > ul {
+nav>ul {
   list-style-type: none;
   padding: 0;
   width: 100%;
 }
 
-nav > ul > li {
+nav>ul>li {
   display: inline-block;
 }
 
-nav > ul > li > a {
+nav>ul>li>a {
   color: #000000 !important;
   text-decoration: none;
   padding: 0 15px;
 }
 
-nav > ul > li > a:visited {
+nav>ul>li>a:visited {
   color: #000000 !important;
   text-decoration: none;
 }
 
-nav > ul > li > a:hover {
+nav>ul>li>a:hover {
   font-weight: 600 !important;
 }
 
-nav > ul > li > a:active{
+nav>ul>li>a:active {
   font-weight: 600 !important;
 }
 
@@ -257,25 +261,26 @@ main {
 
 #introbackgroundqwest picture {
   margin-bottom: 24px;
-  display:inline-block;
+  display: inline-block;
   text-align: center;
 }
 
 #introbackgroundqwest p {
   padding-bottom: 16px;
 }
+
 .duration {
-  padding-bottom: 60px!important;
+  padding-bottom: 60px !important;
   margin-bottom: 0px;
 }
 
-#research h2{
+#research h2 {
   margin-top: 53px;
   margin-bottom: 60px;
   text-align: center;
 }
 
-#research h3{
+#research h3 {
   margin-top: 0px;
   margin-bottom: 16px;
 }
@@ -283,10 +288,9 @@ main {
 .process {
   margin-top: 0px;
   margin-bottom: 40px;
-
 }
 
-#research h4{
+#research h4 {
   text-align: center;
   margin-top: 0px;
   margin-bottom: 25px;
@@ -344,12 +348,12 @@ main {
   margin-bottom: 60px;
 }
 
-#analysis h2{
+#analysis h2 {
   margin-top: 0px;
   text-align: center;
 }
 
-#analysis h3{
+#analysis h3 {
   margin-top: 60px;
   margin-bottom: 16px;
 }
@@ -381,11 +385,11 @@ main {
 }
 
 .sitemap {
-  margin-top:40px;
+  margin-top: 40px;
 }
 
 .designpattern {
-  margin-top:40px;
+  margin-top: 40px;
   margin-bottom: 16.6px;
 }
 
@@ -413,12 +417,12 @@ main {
 }
 
 .prototypelink {
-  margin-top:40px;
+  margin-top: 40px;
   margin-bottom: 60px;
   text-align: center;
 }
 
-#conclusion h2{
+#conclusion h2 {
   margin-bottom: 40px;
   text-align: center;
 }
