--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@ Lemonaid Color (Blue/Green):3EB497;
 
 body {
   background-color: #FFFFFF;
-  font-family: 'Raleway', sans-serif;
-  font-size: 16px;
-  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
   line-height: 1.6;
   color: #000000;
 }
@@ -21,23 +21,25 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  font-family: 'Playfair Display', serif;
-  font-size: 1.5em;
-  font-weight: 900;
-}
-
-h2 {
-  font-family: 'Playfair Display', serif;
-  font-size: 1.31em;
-  font-weight: 900;
-}
-
-h3 {
-  font-size: 1.25em;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.43em;
   font-weight: 600;
 }
 
+h2 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.29em;
+  font-weight: 600;
+}
+
+h3 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.14em;
+  font-weight: 500;
+}
+
 h4 {
+  font-family: 'Raleway', sans-serif;
   font-weight: 600;
 }
 
@@ -47,6 +49,7 @@ img {
 
 a {
   color: #000000;
+  font-weight: 500;
 }
 
 a:visited {
@@ -58,62 +61,56 @@ a:hover,
 a:focus {
   color: #0071FF;
   text-decoration: none;
+  font-weight: 500;
 }
 
 a:active {
   /* selected link */
-  font-weight: 600;
+  font-weight: 500;
   text-decoration: none;
 }
 
 .logo {
-  font-family: Playfair Display !important;
+  font-family: 'Raleway', sans-serif !important;
   font-size: 1em !important;
-  font-weight: 900 !important;
+  font-weight: 600 !important;
   color: #000000 !important;
   text-decoration: none !important;
   /* No underlining */
 }
 
-.button {
-  font-weight: 600;
-  display: inline-block;
-  /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
-  background-color: #E95330;
-  color: #ffffff !important;
-  /* needed to override the default link color */
+.button2 {
+  font-family: 'Raleway', sans-serif !important;
+  background-color: transparent;
+  border: 1px solid #000000 !important;
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid #994c30;
-  /* width of the border, type, color */
-  transition: 0.2s opacity;
   text-decoration: none;
 }
 
-.button:hover,
-.button:focus {
-  opacity: 0.8;
-  /* Reduces the opacity of the button to 80% */
-}
-
-.button.contact {
-  background-color: transparent;
-  color: #000000 !important;
-  border: 2px solid #000000 !important;
-}
-
-.button.contact:hover,
-.button:focus {
+.button2:hover,
+.button2:focus {
+  text-weight: 600;
   background-color: #E95330 !important;
   color: #ffffff !important;
-  border: 2px solid #E95330 !important;
-  opacity: 0.8;
-  /* Reduces the opacity of the button to 80% */
+  border: 1px solid #E95330 !important;
 }
 
-.button.contact:active {
-  color: #C34D32 !important;
-  text-decoration: none !important;
+.button3 {
+  font-family: 'Raleway', sans-serif !important;
+  background-color: transparent;
+  border: 1px solid #000000 !important;
+  padding: 10px;
+  border-radius: 3px;
+  text-decoration: none;
+}
+
+.button3:hover,
+.button3:focus {
+  text-weight: 600;
+  background-color: #3EB497 !important;
+  color: #ffffff !important;
+  border: 1px solid #3EB497 !important;
 }
 
 /* Layout styling */
@@ -124,11 +121,6 @@ a:active {
 .row {
   margin: 25px 0;
   /* 25px top and bottom, 0 left and right */
-}
-
-#work .row {
-  padding-bottom: 25px;
-  border-bottom: 1px solid #4a4a4a;
 }
 
 p {
@@ -152,7 +144,24 @@ p {
   text-align: center;
   /* Centers text */
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 40px;
+}
+
+.indeximg1{
+  margin-bottom: 25px;
+}
+
+.indeximg2{
+  margin-top: 60px;
+  margin-bottom: 25px;
+}
+
+#work h3{
+  margin-bottom: 16px;
+}
+
+#work p{
+  margin-bottom: 25px;
 }
 
 #contact h2 {
@@ -168,10 +177,10 @@ p {
 
 header {
   text-align: center;
-  background-color: #ffffff padding: 10px 0;
+  background-color: #ffffff;
+  padding: 10px 0;
   width: 100%;
   position: fixed;
-  box-shadow: 0px 1px 30px 0px rgba(50, 50, 50, 0.55);
 }
 
 .logo {
@@ -200,15 +209,16 @@ nav>ul>li>a:visited {
 }
 
 nav>ul>li>a:hover {
-  font-weight: 600 !important;
+  font-weight: 500 !important;
 }
 
 nav>ul>li>a:active {
-  font-weight: 600 !important;
+  font-weight: 500 !important;
 }
 
 #hero {
-  padding: 20px 0;
+  margin-top: 50px;
+  margin-bottom: 60px;
   display: inline-block;
   width: 100%;
 }
@@ -220,18 +230,24 @@ main {
 #story .row {
   margin-top: 0px;
   margin-bottom: 0px;
-  padding-bottom: 25px;
-  border-bottom: 1px solid #4a4a4a;
 }
 
 #about h1 {
   text-align: center;
-  /* Centers text */
+  margin-top:50px;
+  margin-bottom:40px;
 }
 
 #story h2 {
   text-align: center;
-  /* Centers text */
+  margin-top: 25px;
+  margin-bottom: 16px;
+
+}
+
+.download {
+  margin-top:16px;
+  margin-bottom:15px;
 }
 
 .wrapper {
@@ -241,13 +257,8 @@ main {
   /* Centers text */
 }
 
-#story h2 {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
 #introbackgroundqwest {
-  background-color: #3A2031;
+  background-color: #50023D;
   color: #FFFFFF;
   /* Centers text */
 }
