--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ p {
 
 #work h3 {
   margin-bottom: 16px;
-  margin-top:0;
+  margin-top: 0;
 }
 
 #work p {
@@ -245,8 +245,10 @@ nav>ul {
   display: none;
 }
 
-.navtoggle.responsive li  {
+.navtoggle.responsive li {
   display: block;
+  padding: 10px 0;
+  border-top: 1px solid rgba (255, 127, 80, 0.5)
 }
 
 .navtoggle, .navtoggle.responsive {
@@ -259,6 +261,14 @@ nav>ul {
   top: 2px;
   font-size: 20px;
   padding-right: 0;
+}
+
+.navtoggle.responsive nav {
+  padding: 24px 0 0;
+}
+
+.navtoggle.responsive li:last-child {
+  padding: 0 0 10px;
 }
 
 nav>ul>li>a {
@@ -520,17 +530,15 @@ Medium devices (640px and larger)
     display: table;
   }
 
-
   #about-page h3 {
     margin-top: 0;
   }
 
-  .explanation p{
+  .explanation p {
     margin-left: auto;
     margin-right: 0;
     float: unset;
   }
-
 }
 
 /* ==============================
@@ -540,7 +548,6 @@ Large devices (1024px or larger)
   body {
     font-size: 18px;
   }
-
 
   .container {
     max-width: 1200px;
@@ -572,7 +579,6 @@ Large devices (1024px or larger)
     margin-left: auto;
     margin-right: auto;
   }
-
 }
 
 /* ==============================
